--- a/SECTION 1/contact.html
+++ b/SECTION 1/contact.html
@@ -14,7 +14,7 @@
          border-radius: 10px;
          padding: 40px;
          background-color:rgb(218, 236, 245) ;
-       
+         border 
       }
 
       body {
